# lang-bot

./: README.md  main.py  pyproject.toml  rag.py  requirements.txt
data/: ai_candidate_profile.txt  ai_job_description.txt  cripto_candidate_profile.txt  hr_best_practices.txt  hr_bot.txt  hr_inc.txt  hr_onboarding.txt  mobile_candidate_profile.txt
