[tool.poetry]
name = "lang-bot"
version = "0.1.0"
description = ""
authors = ["eugepineiro <epineiro@itba.edu.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.6.1"
langchain = "^0.0.352"
chromadb = "^0.4.21"
pysqlite3-binary = "^0.5.2.post2"
tiktoken = "^0.5.2"
sentence-transformers = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
